# MTRX3760-Lab3-520587980

./: README.md
Lab 3 Submission/include/: NotGate.hpp  OrGate.hpp
Lab 3 Submission/src/: Test.cpp  Wire.cpp  XorGate.cpp
Lab3/: CMakeLists.txt  main.cpp
Lab3 Circuit building logic/include/: BuildCircuit.hpp  ReadText.hpp
Lab3 Circuit building logic/src/: BuildCircuit.cpp  OrGate.cpp  Wire.cpp
Lab3 OOD and Documentation/: main.cpp
Lab3 OOD and Documentation/include/: Test.hpp  Wire.hpp
Lab3 OOD/include/: AndGate.hpp  BuildCircuit.hpp  LogicGate.hpp
Lab3 OOD/src/: NotGate.cpp  OrGate.cpp  ReadText.cpp
Lab3 Textfile updated/: main.cpp
Lab3 Textfile updated/include/: XorGate.hpp
Lab3 Unit-testing/include/: LogicGate.hpp  NotGate.hpp  OrGate.hpp  Wire.hpp
Lab3 Unit-testing/src/: ReadText.cpp  XorGate.cpp
Lab3 copy 1/: main.cpp
Lab3 copy 1/include/: AndGate.h  BuildCircuit.h  LogicGate.h  NotGate.h  OrGate.h  ReadText.h  Test.h  Wire.h  XorGate.h  eLogicLevel.h
Lab3 copy 1/src/: AndGate.cpp  BuildCircuit.cpp  LogicGate.cpp  NotGate.cpp  OrGate.cpp  ReadText.cpp  Test.cpp  Wire.cpp  XorGate.cpp  main.cpp
Lab3 eLogicLevel made local from global/include/: AndGate.hpp  Test.hpp
Lab3 eLogicLevel made local from global/src/: AndGate.cpp  LogicGate.cpp  NotGate.cpp  Test.cpp
Lab3/include/: ReadText.hpp  XorGate.hpp
Lab3/src/: AndGate.cpp  BuildCircuit.cpp  LogicGate.cpp
Lab3_start/: CMakeLists.txt
